fix link z-index

--- a/components/item.module.css
+++ b/components/item.module.css
@@ -154,7 +154,6 @@ a.link:visited {
 } */
 
 .main {
-    width: fit-content;
     display: flex;
     align-items: baseline;
 }
